@@ -1,3 +1,5 @@
+	* pass along host header with http proxy requests and possible http_connection shutdown hang
+
 0.16.12 release
 
 	* fix building with C++11
